src/assets/scss/blocks/_header.scss
header {
    display: flex;
    flex-direction: column;
    gap: 3rem;
    align-items: center;

    @include breakpoint($sm-bp) {
        padding: 3rem 3rem 0rem 3rem;
        gap: 1rem;
    }

    h1 {
        color: #000;
        font-size: 9rem;
        text-transform: uppercase;
        line-height: 1;
        font-weight: 800;
        letter-spacing: -0.4rem;
        font-family: "JoannaSansNova";

        @include breakpoint($sm-bp) {
            font-size: 6rem;
        }
    }
}

.header__subtitle {
    font-size: 4rem;
    font-weight: 400;
    display: flex;
    gap: 2rem;

    @include breakpoint($sm-bp) {
        gap: 1rem;
        font-size: 3rem;
    }

    div {
        overflow: hidden;
        position: relative;
        height: 4rem;

        li {
            font-weight: 600;
            height: 4.5rem;
            margin-bottom: 4.5rem;
            display: block;
        }
    }
}

.flip2 {
    animation: flip2 6s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
}

.flip3 {
    animation: flip3 8s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
}

.flip4 {
    animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
}

.flip5 {
    animation: flip5 12s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
}

@keyframes flip2 {
    0% {
        margin-top: -18rem;
    }

    5% {
        margin-top: -9rem;
    }

    50% {
        margin-top: -9rem;
    }

    55% {
        margin-top: 0px;
    }

    99.99% {
        margin-top: 0px;
    }

    100% {
        margin-top: -18rem;
    }
}

@keyframes flip3 {
    0% {
        margin-top: -27rem;
    }

    5% {
        margin-top: -18rem;
    }

    33% {
        margin-top: -18rem;
    }

    38% {
        margin-top: -9rem;
    }

    66% {
        margin-top: -9rem;
    }

    71% {
        margin-top: 0px;
    }

    99.99% {
        margin-top: 0px;
    }

    100% {
        margin-top: -27rem;
    }
}

@keyframes flip4 {
    0% {
        margin-top: -36rem;
    }

    5% {
        margin-top: -27rem;
    }

    25% {
        margin-top: -27rem;
    }

    30% {
        margin-top: -18rem;
    }

    50% {
        margin-top: -18rem;
    }

    55% {
        margin-top: -9rem;
    }

    75% {
        margin-top: -9rem;
    }

    80% {
        margin-top: 0px;
    }

    99.99% {
        margin-top: 0px;
    }

    100% {
        margin-top: -36rem;
    }
}

@keyframes flip5 {
    0% {
        margin-top: -45rem;
    }

    5% {
        margin-top: -36rem;
    }

    20% {
        margin-top: -36rem;
    }

    25% {
        margin-top: -27rem;
    }

    40% {
        margin-top: -27rem;
    }

    45% {
        margin-top: -18rem;
    }

    60% {
        margin-top: -18rem;
    }

    65% {
        margin-top: -9rem;
    }

    80% {
        margin-top: -9rem;
    }

    85% {
        margin-top: 0px;
    }

    99.99% {
        margin-top: 0px;
    }

    100% {
        margin-top: -45rem;
    }
}

